Revise Sets.tex for Probability and Measure Theory
Updated the document structure and content for the presentation on Probability and Measure Theory by adding references to it.

--- a/Sets/Sets.tex
+++ b/Sets/Sets.tex
@@ -507,5 +507,31 @@
 		With the aid of examples, discuss the similarities and differences between finite, countably infinite, and uncountable sets. 
 	\end{frame}
 	
+\begin{frame}{References}
+	\begin{thebibliography}{99}
+		
+		\bibitem{grigoryan}
+		A. Grigoryan,
+		\textit{Measure Theory and Probability},
+		University of Bielefeld, Lecture Notes.
+		
+		\bibitem{athreya}
+		K. B. Athreya and S. N. Lahiri,
+		\textit{Measure and Probability Theory},
+		Springer, 2006.
+		
+		\bibitem{billingsley}
+		P. Billingsley,
+		\textit{Probability and Measure},
+		3rd ed., Wiley, 1995.
+		
+		\bibitem{youtube}
+		A Probability Space,
+		\textit{Measure Theory and Probability},
+		YouTube lecture series, 2023.\\
+		Link: \url{https://youtu.be/swa1VRYms3Q}
+	\end{thebibliography}
+
+\end{frame}
 
 	\end{document}
